Added commonLootTable1 script
Added commonLootTable1 script in Assets/Scripts/LootTables

/* THIS SCRIPT SHOULD BE PLACED ON THE ENEMY
 * ------------------------------------------
    TO ADD AN ITEM:
       Step 1.) edit public int[] table (make sure the numbers add up to 100%

        Example:
------------------------------------
        public int[] table =
    {
        20, //Bow
        20, //Crossbow
        20, //Dagger
        20, //Healthpot
        20, //Crack Cocaine
    };
--------------------------------------
^ In the above example, each item has a 20% drop rate.

    Step 2.) Look for the line of code that starts with "Object[] subListObjects" in void Start(). The part you are looking for
    is the "Loot/commonTable1" or something similar. This is what tells the game where to look for the items in question! Make sure
    it is pointing torwards the correct folder in the project Hierchy.

    Step 3.) Look at step 1, do you see how Bow is above Crossbow, and crack Cocaine is below everything? Make sure the Project Hierchy in
    the editor looks exactly the same as the list in step 1! this will ensure everything is the correct drop rate

    and that's it!
    */

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,7 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\ItemTables.cs" />
+    <Compile Include="Assets\Scripts\LootTables\commonLootTable1.cs" />
     <Reference Include="UnityEngine">
       <HintPath>D:/GameDev/Editors/2019.4.11f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
